Responsive Update : Table rows as cards, category subheader layout fixed issue.
Responsive Update : Table column design fixes and supports long text to be applied ellipsis.
Responsive Update - Table Row Selection fixes (Smart css to display or not the checkbox selection)
Responsive Update - Table Expansion Row redesign and provided a dynamic arrow changing
Responsive Update - Table Disabled Row redesign
Responsive Update - DataPager perform tests and fixed layout issues on mobile, prioritize the page next/previous navigation.

--- a/src/main/resources/gwt/material/design/client/ui/pager/resources/css/data-pager.css
+++ b/src/main/resources/gwt/material/design/client/ui/pager/resources/css/data-pager.css
@@ -42,3 +42,21 @@
 .data-pager .select-wrapper .caret {
     color: #9e9e9e !important;
 }
+
+@media only screen and (max-width: 520px), (min-device-width: 0px) and (max-device-width: 519px) {
+    .table-container .data-pager {
+        margin-top: -6px;
+        border-top: 1px solid #e9e9e9;
+        text-align: center;
+    }
+    .table-container .data-pager .action-page-panel {
+        margin-top: 0px !important;
+    }
+    .table-container .data-pager .action-page-panel .arrow-prev {
+        float: left;
+    }
+    .table-container .data-pager .action-page-panel span {
+        display: inline-block;
+        float: none;
+    }
+}
